[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brukerapi"
version = "0.1.9"
description = "Bruker API"
authors = [
    { name="Tomas Psorn", email="tomaspsorn@isibrno.cz" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.20.0,<2",
    "pyyaml"
]
urls = { "Homepage" = "https://github.com/isi-nmr/brukerapi-python","Download" = "https://github.com/isi-nmr/brukerapi-python/releases/latest"}

[project.scripts]
bruker = "brukerapi.cli:main"

[tool.setuptools]
packages = ["brukerapi", "brukerapi.config"]
include-package-data = true
zip-safe = false

[project.optional-dependencies]
dev = [
    "pytest",
    "zenodo_get"
]